<resources>
    <string name="app_name">MyLauncher</string>
    <string name="action_settings">Settings</string>
    <string name="hacking_view">Click Me</string>
    <string name="pie_view">Pie View</string>
    <string name="input_something">input_something</string>
    <string name="aha_explosion">aha,this is explosion</string>
    <string name="pref_edit">Key Pref Edit</string>
    <string name="edit_me">Edit</string>
    <string name="pref_list">Pref Edit</string>
    <string name="list">List</string>
    <string name="list_your_needs">list your needs</string>

    <string name="pref_list_default_value">#3F51B5</string>
    <string name="settings">Settings</string>
    <string name="image_color">Color Image</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="pref_theme_color">Pref Theme Color</string>
    <string name="choose_theme_color">Choose a theme color</string>

    <string name="color_primary">Indigo</string>
    <string name="color_red">Red</string>
    <string name="color_pink">Pink</string>
    <string name="color_purple">Purple</string>
    <string name="color_deep_purple">Deep Purple</string>
    <string name="color_indigo">Indigo</string>
    <string name="color_blue">Blue</string>
    <string name="selected">selected</string>
    <string name="title_activity_pie_view">PieViewActivity</string>
    <string name="canvas_view">Canvas View</string>
    <string name="title_activity_canvas_view">Canvas View</string>
    <string name="custom_home_screen">Custom Home Screen</string>
    <string name="app_icon">App Icon</string>
</resources>
